--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="nav">
                     <li class="items"><a href="./index.html" class="link current">Студія</a> </li>
                     <li class="items"><a href="./portfolio.html" class="link">Портфоліо</a> </li>
-                    <li class="items"><a href="" class="link">Контакти</a> </li>
+                    <li class="items"><a href="#" class="link">Контакти</a> </li>
                 </ul>
             </nav>
             <ul class="nav-contact">                
@@ -54,7 +54,7 @@
             <section class="main">
                 <!-- <div class="container"> -->
                     <h1 class="main-title">Ефективні рішення для<br>вашого бізнесу</h1>
-                    <button class="main-button" type="button">Замовити послугу</button>
+                    <button class="main-button" type="button" data-modal-open>Замовити послугу</button>
                 <!-- </div>                 -->
             </section>            
             <!-- Особливості -->
@@ -396,5 +396,16 @@
                 </div>
             </section>
         </footer>
+        <!-- Модальное вікно -->
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+            <button class="close" type="button" data-modal-close>
+                <svg class="close-icon" width="18" height="18">
+                    <use href="./images/icons.svg#close"></use>
+                </svg>
+            </button>
+            </div>
+        </div>
+        <script src="./js/modal.js"></script>
     </body>
 </html>
