--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,16 @@
             <!-- Проекти -->            
             <ul class="list">
                 <li class="projects">
-                    <a href="#" class="items">                        
+                    <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/technokryak.jpg" alt="Технокряк" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>                    
                     <div class="border">
                             <h3 class="projects-title">Технокряк</h3>
                             <p class="projects-subtitle">Веб-сайт</p>
@@ -75,7 +83,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/gs.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>                    
                     <div class="border">
                             <h3 class="projects-title">Постер New Orlean vs Golden Star</h3>
                             <p class="projects-subtitle">Дизайн</p>
@@ -84,7 +100,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
-                    <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370" height="294" />
+                    <div class="projects-box">
+                        <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370" height="294" />
+                        <div class="projects-overlay">
+                            <p class="projects-text-overlay">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                            </p>
+                        </div>
+                    </div>                    
                     <div class="border">
                         <h3 class="projects-title">Ресторан Seafood</h3>
                         <p class="projects-subtitle">Приложение</p>
@@ -93,7 +117,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/prime.jpg" alt="Проект Prime" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>                    
                     <div class="border">
                         <h3 class="projects-title">Проект Prime</h3>
                         <p class="projects-subtitle">Маркетинг</p>
@@ -102,7 +134,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>
                     <div class="border">
                         <h3 class="projects-title">Проект Boxes</h3>
                         <p class="projects-subtitle">Приложение</p>
@@ -111,7 +151,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>
                     <div class="border">
                         <h3 class="projects-title">Inspiration has no Borders</h3>
                         <p class="projects-subtitle">Веб-сайт</p>
@@ -120,7 +168,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/le.jpg" alt="Издание Limited Edition" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>
                     <div class="border">
                         <h3 class="projects-title">Издание Limited Edition</h3>
                         <p class="projects-subtitle">Дизайн</p>
@@ -129,7 +185,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/lab.jpg" alt="Проект LAB" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>
                     <div class="border">
                         <h3 class="projects-title">Проект LAB</h3>
                         <p class="projects-subtitle">Маркетинг</p>
@@ -138,7 +202,15 @@
                 </li>
                 <li class="projects">
                     <a href="#" class="items">
+                    <div class="projects-box">
                     <img src="./images/business.jpg" alt="Growing Business" width="370" height="294" />
+                        <div class="projects-overlay">
+                        <p class="projects-text-overlay">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                        </div>
+                    </div>
                     <div class="border">
                         <h3 class="projects-title">Growing Business</h3>
                         <p class="projects-subtitle">Приложение</p>
