--- a/index.html
+++ b/index.html
@@ -121,12 +121,15 @@
                     <ul class="case-list">
                         <li class="items">
                             <img src="./images/box1.jpg" alt="Чим ми займаємося рис 1" width="370" />
+                            <p class="labels">Десктопні додатки</p>
                         </li>
                         <li class="items">
                             <img src="./images/box2.jpg" alt="Чим ми займаємося рис 2" width="370" />
+                            <p class="labels">Мобільні додатки</p>
                         </li>
                         <li class="items">
                             <img src="./images/box3.jpg" alt="Чим ми займаємося рис 3" width="370" />
+                            <p class="labels">Дизайнерські рішення</p>
                         </li>
                     </ul>
                 </div>
